k8s/namespace-local.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sgcc-local
  labels:
    environment: local
    managed-by: kubernetes
