k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sgcc
  labels:
    name: sgcc-memo
